bin/testsuite/tests/compiler/src/errors/compiler5583.swg
#global testerror "Err0746"

#include(<stdio.h>)
int main() {
   // printf() displays the string inside quotation
   printf("Hello, World!");
   return 0;
}